# rkutils

./: INSTALL  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  rules
man/: Makefile.am
src/: Makefile.am
